--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "@hotwired/stimulus": "^3.1.0",
     "@hotwired/turbo-rails": "^7.2.0",
     "@popperjs/core": "^2.11.6",
+    "@rails/actioncable": "^7.0.4",
     "bootstrap": "^5.2.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
-  "scripts": { 
-    "build": "webpack --config webpack.config.js" 
-  } 
+  "scripts": {
+    "build": "webpack --config webpack.config.js"
+  }
 }
